# TradingView_server

./: CMakeLists.txt  README.md
Server_TradingView/: README.md  binance_ex.cpp  binance_ex.h  bybit_ex.cpp  bybit_ex.h  config.cpp  config.h  exchange.cpp  exchange.h  finandy_ex.cpp  finandy_ex.h  indicators.cpp  indicators.h  main.cpp  okx_ex.cpp  okx_ex.h  server.cpp  trader.cpp  trader.h  util.cpp  util.h
backtests/: CMakeLists.txt
backtests/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  StrategyManager.cpp  StrategyManager.h  backtester.cpp  backtester.h  config.json  strategy_functions.h  strategy_interface.h  user_strategy.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  Price.jsx  index.css  index.jsx  main.jsx  tailwind.css
mining/: main.cpp
